@@ -10,8 +10,3 @@ CRYPTDISKS_MOUNT=""
 # Default check script. Takes effect, if the 'check' option is set in crypttab
 # without a value.
 CRYPTDISKS_CHECK=blkid
-
-# Default precheck script. Takes effect, if the 'precheck' option is set in
-# crypttab without a value.
-# Default is 'un_blkid' for plain dm-crypt devices if unset here.
-CRYPTDISKS_PRECHECK=
