@@ -33,6 +33,10 @@ cryptsetup (2:2.0.3-2) UNRELEASED; urgency=medium
     volumes.  This is no longer true since 2:1.0.6~pre1+svn45-1, cf. #406317.
   * debian/cryptdisks.functions: refactoring, using functions from
     /usr/share/cryptsetup/initramfs/functions.
+  * Remove support for the 'precheck' crypttab(5) option.  The precheck for
+    LUKS devices is still hardcoded to `cryptsetup isLuks`; the script refuses
+    to unlock non-LUKS devices (plain dm-crypt and tcrypt devices) containing
+    a known filesystem (other that swap).
 
   [ Jonas Meurer ]
   * debian/doc/crypttab.xml:
